--- a/src/corazones_torcidos_frontend/src/index.scss
+++ b/src/corazones_torcidos_frontend/src/index.scss
@@ -1,6 +1,8 @@
 body {
+  margin: 0;
+  padding: 0;
+  background-color: #000;
   font-family: sans-serif;
-  font-size: 1.5rem;
 }
 
 img {
@@ -18,20 +20,4 @@ form {
   max-width: 40vw;
   margin: auto;
   align-items: baseline;
-}
-
-button[type="submit"] {
-  padding: 5px 20px;
-  margin: 10px auto;
-  float: right;
-}
-
-#greeting {
-  margin: 10px auto;
-  padding: 10px 60px;
-  border: 1px solid #222;
-}
-
-#greeting:empty {
-  display: none;
 }
